--- a/app/src/main/res/layout/activity_workout_shoulder.xml
+++ b/app/src/main/res/layout/activity_workout_shoulder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +8,15 @@
     android:background="@drawable/hatter"
     tools:context=".workout.WorkoutShoulder">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <GridLayout
             android:layout_width="match_parent"
@@ -39,9 +44,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
+                        android:layout_width="match_parent"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_vall_pykepushup" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -73,9 +78,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
+                        android:layout_width="match_parent"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_vall_pykepushup_emeltlabas" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -107,9 +112,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
+                        android:layout_width="match_parent"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_oldalsoplank" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -141,9 +146,9 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:layout_width="135dp"
+                        android:layout_width="match_parent"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/workout_fekvo" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -159,6 +164,6 @@
 
         </GridLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
