--- a/app/src/main/res/layout/activity_caloria_calculator.xml
+++ b/app/src/main/res/layout/activity_caloria_calculator.xml
@@ -182,13 +182,12 @@
         android:id="@+id/btnCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
         android:text="Kalória számolás"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnReset"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rgGoal"
         app:layout_constraintVertical_bias="0.19999999" />
@@ -229,7 +228,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="false"
-            android:text="Szintentartás"
+            android:text="Szinten tartás"
             android:textColor="#FFFFFF" />
 
         <RadioButton
@@ -302,6 +301,7 @@
         android:text="Visszaállítás"
         app:layout_constraintBottom_toBottomOf="@+id/btnCalculate"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnCalculate"
         app:layout_constraintTop_toTopOf="@+id/btnCalculate"
         app:layout_constraintVertical_bias="0.19" />
 
