--- a/app/src/main/res/layout/activity_workout_biceps.xml
+++ b/app/src/main/res/layout/activity_workout_biceps.xml
@@ -41,7 +41,7 @@
                     <ImageView
                         android:layout_width="135dp"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_biceps_huzodzkodas"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
                     <ImageView
                         android:layout_width="135dp"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_bicepsdontotttorzsu"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                     <ImageView
                         android:layout_width="135dp"
                         android:layout_height="85dp"
-                        android:src="@drawable/my_gif"/>
+                        android:src="@drawable/gif_workout_biceps_fekvo"/>
 
                     <TextView
                         android:layout_width="wrap_content"
