--- a/app/src/main/res/layout/workout_leg_guggolas.xml
+++ b/app/src/main/res/layout/workout_leg_guggolas.xml
@@ -22,7 +22,7 @@
         <pl.droidsonroids.gif.GifImageView
             android:layout_width="match_parent"
             android:layout_height="286dp"
-            android:src="@drawable/my_gif" />
+            android:src="@drawable/gif_workout_guggolas" />
 
         <ImageView
             android:layout_width="wrap_content"
